# wibble-client-core

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: core-ci.yml  dependency-review.yml  markdown-lint.yml  release-dry-run.yml  release.yml  reusable-rust-release-build.yml  scorecard.yml  verify-release.yml
crates/: AGENTS.md
crates/wibble-client-core/: Cargo.toml
crates/wibble-client-core/src/: lib.rs
crates/wibble-core-domain/: Cargo.toml
crates/wibble-core-domain/src/: lib.rs
crates/wibble-openmls-engine/: Cargo.toml
crates/wibble-openmls-engine/src/: lib.rs
docs/: repo-bootstrap-architecture-plan.md
docs/architecture/: mls-protocol-checklist.md  openmls-single-engine.md  slsa-level-3-release.md
docs/decisions/: ADR-0001-repo-boundary.md  ADR-0002-openmls-single-engine.md  ADR-0003-mls-state-model.md  ADR-0003-slsa-level-3-release-pipeline.md  ADR-0004-cargo-lock-policy.md
specs/: compatibility-matrix.yaml
